src/app/pages/article-container/article-container.component.scss
@use 'utils/colors';
@use 'utils/typography';

.main-content {
  display: flex;
  flex-direction: column;
  flex: 2;
  row-gap: 35px;
  p {
    padding: 0;
    margin: 0;
  }
}

.article-date {
  font-family: typography.$font-family-varela;
  font-size: 14px;
}

.article-title {
  font-size: 44px;
}

.inserted-image {
  width: 100%;
}

.sidebar {
  flex: 1;
}

.blend {
  position: absolute;
  bottom: 0px;
  width: 100%;
  left: 0px;
}
.article-header {
  position: relative;
  margin-bottom: 10px;
}

.article-info {
  position: absolute;
  display: flex;
  flex-direction: column;
  row-gap: 30px;
  z-index: 1;
  bottom: 50px;
  left: 50px;
  color: black;
}

.article-image {
  width: 100%;
  height: 580px;
}

.main {
  display: flex;
  flex-direction: row;
  column-gap: 15px;
}

.reply-link {
  text-align: end;
  flex: 1;
}

.comments {
  display: flex;
  flex-direction: column;
  row-gap: 45px;
}

.comment-image {
  width: 57px;
  height: 58px;
}

.comment {
  display: flex;
  flex-direction: row;
  column-gap: 20px;
}

.comment-name {
  font-family: typography.$font-family-bitter;
  font-size: 18px;
  color: colors.$victoria;
}

.comment-date {
  font-family: typography.$font-family-varela;
  font-size: 12px;
  color: #666666;
}

.email-field,
.name-field {
  width: 50%;
  height: 40px;
}

.body-field {
  width: 100%;
  height: 180px;
  padding-top: 10px;
}

.form-field {
  padding-left: 18px;
  background-color: #dddddd;
  border: none;
  font-family: typography.$font-family-varela;
  font-size: 14px;
}

.form {
  display: flex;
  flex-direction: column;
  row-gap: 8px;
}

.btn {
  width: 150px;
  height: 50px;
  border: none;
  color: white;
  background-color: #4d4382;
}

.comment-info {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  column-gap: 10px;
  margin-bottom: 10px;
}

.body {
  background-color: white;
  display: flex;
  p {
    padding: 35px 20px 15px 30px;
    font-size: 14px;
    line-height: 22px;
  }
  flex-direction: column;
  row-gap: 35px;
}

.author-title {
  font-size: 24px;
  font-weight: bold;
}

.comments {
  h1 {
    font-size: 24px;
    font-weight: bold;
  }
}

.comments {
  background-color: white;
  padding: 35px 20px 15px 30px;
}

.author {
  background-color: white;
  padding: 35px 20px 15px 30px;
}

.mid-banner {
  border: 1px solid black;
  width: 100%;
  background-color: white;
  height: 120px;
  margin: 10px 0;
}

.comment-body {
  font-family: typography.$font-family-varela;
  font-size: 13px;
  line-height: 20px;
}

.reply-link {
  cursor: pointer;
  color: colors.$victoria;
  font-family: typography.$font-family-varela-round;
  font-size: 14px;
}

.author-info {
  margin: 30px 0px;
  display: flex;
  flex-direction: row;
  column-gap: 20px;
  align-items: center;
}

.author-about {
  font-size: 16px;
  font-family: typography.$font-family-varela;
  font-weight: normal;
  line-height: 20px;
}

